# address_audit

./: .env_example  .gitignore  README.md  app.py  cli_eval.py  cli_run.py  cli_seed.py  cli_seed.py.bak  main_parser.py  pipeline_before.tmp  pyproject.toml
address_audit/: base_data.py  candidates.py  clustering.py  config.py  conflicts.py  db.py  evaluate.py  judge.py  models.py  parser_llm.py  pipeline.py  scoring.py  simulate.py  utils.py
data/: address_governance.xlsx  alias_aoi.json  alias_road.json  config.best.json  config.default.json
frontend/: index.html
